--- a/index.html
+++ b/index.html
@@ -1,1 +1,280 @@
-hello viligogo
+<!DOCTYPE html>
+<!-- saved from url=(0067)./index.html -->
+<html lang="zh-CN"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    
+    <meta name="renderer" content="webkit">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Viligogo</title>
+    <link rel="stylesheet" href="./css/hui.min.css">
+    <link rel="stylesheet" href="./css/iconfont.min.css">
+    <link rel="stylesheet" href="./css/iconfont.css">
+    <link rel="stylesheet" href="./css/animate.min.css">
+    <link rel="stylesheet" href="./css/swiper.min.css">
+    <link rel="stylesheet" href="./css/common.css">
+    <link rel="stylesheet" href="./css/index.css">
+    <!--[if lt IE 9]>
+        <script type="text/javascript" src="hui/js/html5shiv.js"></script>
+        <script type="text/javascript" src="hui/js/respond.min.js"></script>
+    <![endif]-->
+</head>
+
+<body data-new-gr-c-s-check-loaded="14.984.0" data-gr-ext-installed="">
+
+    <header class="navbar-wrapper cl">
+        <div class="navbar">
+            <div class="container cl">
+                <a class="logo navbar-logo f-l mr-10" href="./index.html">
+                    <img src="./img/logo.png" alt="">
+                </a>
+                <a aria-hidden="false" class="nav-toggle Hui-iconfont visible-xs" href="javascript:;"></a>
+                <nav class="nav navbar-nav nav-collapse f-r" role="navigation" id="Hui-navbar">
+                    <ul class="cl">
+                        <li class="current">
+                            <a href="./index.html">首页</a>
+                        </li>
+                        <li>
+                            <a href="./solution.html">精彩案例</a>
+                        </li>
+                        <li>
+                            <a href="http://vlgg66.5ii.top">交流社区</a>
+                        </li>
+                        <li>
+                            <a href="./docs.html">技术文档</a>
+                        </li>
+                        <li>
+                            <a href="./about.html">关于我们</a>
+                        </li>
+                    </ul>
+                </nav>
+                <nav class="navbar-userbar hidden-xs">
+
+                </nav>
+            </div>
+        </div>
+    </header>
+
+    <section class="vr_case">
+        <div class="vr_title vr_title_white wow bounceInDown" style="visibility: hidden; animation-name: none;">
+            <h2>虚拟世界从这里出发</h2>
+            <p>
+                <span>Start From Viligogo</span>
+            </p>
+        </div>
+        <div class="swiper-container vr_slide vr_scale wow bounceInUp swiper-container-horizontal" style="visibility: hidden; animation-name: none;">
+            <div class="swiper-wrapper" style="transform: translate3d(-1104px, 0px, 0px); transition-duration: 0ms;"><div class="swiper-slide swiper-slide-duplicate swiper-slide-duplicate-prev" data-swiper-slide-index="0" style="width: 368px;">
+                    <a href="./index.html">
+                        <img src="./img/slide-1.jpg" alt="">
+                    </a>
+                </div><div class="swiper-slide swiper-slide-duplicate swiper-slide-duplicate-active" data-swiper-slide-index="1" style="width: 368px;">
+                    <a href="./index.html">
+                        <img src="./img/slide-1.jpg" alt="">
+                    </a>
+                </div><div class="swiper-slide swiper-slide-duplicate swiper-slide-duplicate-next" data-swiper-slide-index="2" style="width: 368px;">
+                    <a href="./index.html">
+                        <img src="./img/slide-1.jpg" alt="">
+                    </a>
+                </div>
+                <div class="swiper-slide swiper-slide-prev" data-swiper-slide-index="0" style="width: 368px;">
+                    <a href="./index.html">
+                        <img src="./img/slide-1.jpg" alt="">
+                    </a>
+                </div>
+                <div class="swiper-slide swiper-slide-active" data-swiper-slide-index="1" style="width: 368px;">
+                    <a href="./index.html">
+                        <img src="./img/slide-1.jpg" alt="">
+                    </a>
+                </div>
+                <div class="swiper-slide swiper-slide-next" data-swiper-slide-index="2" style="width: 368px;">
+                    <a href="./index.html">
+                        <img src="./img/slide-1.jpg" alt="">
+                    </a>
+                </div>
+            <div class="swiper-slide swiper-slide-duplicate swiper-slide-duplicate-prev" data-swiper-slide-index="0" style="width: 368px;">
+                    <a href="./index.html">
+                        <img src="./img/slide-1.jpg" alt="">
+                    </a>
+                </div><div class="swiper-slide swiper-slide-duplicate swiper-slide-duplicate-active" data-swiper-slide-index="1" style="width: 368px;">
+                    <a href="./index.html">
+                        <img src="./img/slide-1.jpg" alt="">
+                    </a>
+                </div><div class="swiper-slide swiper-slide-duplicate swiper-slide-duplicate-next" data-swiper-slide-index="2" style="width: 368px;">
+                    <a href="./index.html">
+                        <img src="./img/slide-1.jpg" alt="">
+                    </a>
+                </div></div>
+            <div class="vr_slide_btn">
+                <div class="swiper-button-prev vr_slide_prev">
+                    <i class="vrfont vr-fanhui"></i>
+                </div>
+                <div class="swiper-button-next vr_slide_next">
+                    <i class="vrfont vr-gengduo1"></i>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="vr_news">
+        <div class="vr_title wow bounceInDown" style="visibility: hidden; animation-name: none;">
+            <h2>新闻中心</h2>
+            <p>
+                <span>CASE APPRECIATION</span>
+            </p>
+        </div>
+        <div class="vr_news_tab">
+            <button class="active wow bounceInRight" type="button" style="visibility: hidden; animation-name: none;">公司新闻</button><button class="wow bounceInLeft" type="button" style="visibility: hidden; animation-name: none;">行业动态</button>
+        </div>
+        <div class="container vr_news_content">
+            <div class="row cl">
+                <div class="col-xs-12 col-sm-6 wow bounceInLeft" style="visibility: hidden; animation-name: none;">
+                    <dl class="vr_news_list">
+                        <dt class="cl">
+                            <div class="vr_news_img l">
+                                <img src="./img/news.jpg" alt="">
+                            </div>
+                            <div class="vr_news_text r">
+                                <h2>vr之家-领先的虚拟现实网站1</h2>
+                                <p>2015年7月3日，防火涂料行业标杆企业 福建南烽防火科技有限公司 提前顺利通过了中......</p>
+                                <a class="btn" href="./index.html#">查看</a>
+                            </div>
+                        </dt>
+                        <dd>
+                            <a href="./index.html#">热烈祝贺中国“南烽一号”被认定为国内领先！<span class="r">2020-09-14</span></a>
+                        </dd>
+                        <dd>
+                            <a href="./index.html#">热烈祝贺中国“南烽一号”被认定为国内领先！<span class="r">2020-09-14</span></a>
+                        </dd>
+                        <dd>
+                            <a href="./index.html#">热烈祝贺中国“南烽一号”被认定为国内领先！<span class="r">2020-09-14</span></a>
+                        </dd>
+                    </dl>
+                </div>
+                <div class="col-xs-12 col-sm-6 wow bounceInRight" style="visibility: hidden; animation-name: none;">
+                    <div class="vr_news_mask">
+                        <img src="./img/news-banner.jpg" alt="">
+                        <p>VR全景</p>
+                    </div>
+                </div>
+                <p class="text-c"><a class="btn btn_more wow bounceInUp" href="./index.html#" style="visibility: hidden; animation-name: none;">MORE →</a></p>
+            </div>
+            <div class="row cl dis_n">
+                <div class="col-xs-12 col-sm-6 wow bounceInLeft animated" style="visibility: visible; animation-name: bounceInLeft;">
+                    <dl class="vr_news_list">
+                        <dt class="cl">
+                            <div class="vr_news_img l">
+                                <img src="./img/news.jpg" alt="">
+                            </div>
+                            <div class="vr_news_text r">
+                                <h2>vr之家-领先的虚拟现实网站2</h2>
+                                <p>2015年7月3日，防火涂料行业标杆企业 福建南烽防火科技有限公司 提前顺利通过了中......</p>
+                                <a class="btn" href="./index.html#">查看</a>
+                            </div>
+                        </dt>
+                        <dd>
+                            <a href="./index.html#">热烈祝贺中国“南烽一号”被认定为国内领先！<span class="r">2020-09-14</span></a>
+                        </dd>
+                        <dd>
+                            <a href="./index.html#">热烈祝贺中国“南烽一号”被认定为国内领先！<span class="r">2020-09-14</span></a>
+                        </dd>
+                        <dd>
+                            <a href="./index.html#">热烈祝贺中国“南烽一号”被认定为国内领先！<span class="r">2020-09-14</span></a>
+                        </dd>
+                    </dl>
+                </div>
+                <div class="col-xs-12 col-sm-6 wow bounceInRight animated" style="visibility: visible; animation-name: bounceInRight;">
+                    <div class="vr_news_mask">
+                        <img src="./img/news-banner.jpg" alt="">
+                        <p>VR全景</p>
+                    </div>
+                </div>
+                <p class="text-c"><a class="btn btn_more wow bounceInUp animated" href="./index.html#" style="visibility: visible; animation-name: bounceInUp;">MORE →</a></p>
+            </div>
+        </div>
+    </section>
+
+
+
+    <section class="vr_case vr_case_app">
+        <div class="vr_title vr_title_white wow bounceInDown" style="visibility: hidden; animation-name: none;">
+            <h2>成功案例</h2>
+            <p>
+                <span>CASE APPRECIATION</span>
+            </p>
+        </div>
+        <div class="swiper-container vr_case_slide wow bounceInUp swiper-container-horizontal" style="visibility: hidden; animation-name: none;">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide swiper-slide-active" style="width: 1104px;">
+                    <img src="./img/banner-case.jpg" alt="">
+                    <div class="slide_text">
+                        <p>[vr游戏-梦回圆明园]</p>
+                        <a href="./index.html#">了解更多</a>
+                    </div>
+                </div>
+                <div class="swiper-slide swiper-slide-next" style="width: 1104px;">
+                    <img src="./img/banner-case.jpg" alt="">
+                    <div class="slide_text">
+                        <p>[vr游戏-梦回圆明园]</p>
+                        <a href="./index.html#">了解更多</a>
+                    </div>
+                </div>
+                <div class="swiper-slide" style="width: 1104px;">
+                    <img src="./img/banner-case.jpg" alt="">
+                    <div class="slide_text">
+                        <p>[vr游戏-梦回圆明园]</p>
+                        <a href="./index.html#">了解更多</a>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-button-prev vr_case_prev swiper-button-disabled">
+                <i class="vrfont vr-fanhui"></i>
+            </div>
+            <div class="swiper-button-next vr_case_next">
+                <i class="vrfont vr-gengduo1"></i>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container footer">
+            <div class="footer_list cl wow bounceInUp" style="visibility: hidden; animation-name: none;">
+                <a href="./index.html#">关于Viligogo</a>
+                <a href="./index.html#">合作伙伴</a>
+                <a href="./index.html#">资源</a>
+                <a href="./index.html#">下载</a>
+                <div class="r">
+                    <a href="./index.html#"><i class="vrfont vr-sina"></i></a>
+                    <a href="./index.html#"><i class="vrfont vr-qq"></i></a>
+                    <a href="./index.html#"><i class="vrfont vr-weixin"></i></a>
+                </div>
+            </div>
+            <div class="container wow bounceInUp" style="visibility: hidden; animation-name: none;">
+                <div class="row cl footer_text">
+                    <div class="col-sm-4 col-xs-12">
+                        <p>Viligogo技术团队</p>
+                        <p><span>客服电话：000-666666</span></p>
+                    </div>
+                    <div class="col-sm-4 col-xs-12">
+                        <p>地址</p>
+                        <p><span>北京海淀区</span></p>
+                    </div>
+                    <div class="col-sm-4 col-xs-12 cl">
+                        <img class="r" src="./img/ewm.jpg" alt="">
+                        <span class="r">关注我们</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="copyright wow bounceInUp" style="visibility: hidden; animation-name: none;">
+            <div class="container">CopyRight© 2020 Viligogo技术团队All Rights Reserved</div>
+        </div>
+    </footer>
+
+    <script src="./js/jquery-1.11.3.min.js"></script>
+    <script src="./js/swiper.min.js"></script>
+    <script src="./js/wow.min.js"></script>
+    <script src="./js/slide.js"></script>
+    <script src="./js/main.js"></script>
+    <script>new WOW().init();</script>
+
+
+</body></html>
