--- a/index.html
+++ b/index.html
@@ -275,6 +275,8 @@
     <script src="./js/slide.js"></script>
     <script src="./js/main.js"></script>
     <script>new WOW().init();</script>
-
+    <script>
+        console.log("viligogo!!");
+    </script>
 
 </body></html>
