--- a/test_vue.html
+++ b/test_vue.html
@@ -1,53 +1,32 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-
 <meta charset="utf-8">
-
 <title>Vue 测试实例 - 菜鸟教程(runoob.com)</title>
-
-<script src="https://cdn.staticfile.org/vue/2.2.2/vue.min.js"></script>
-
+<script src="https://cdn.staticfile.org/vue/2.4.2/vue.min.js"></script>
+<script src="https://cdn.staticfile.org/axios/0.18.0/axios.min.js"></script>
 </head>
-
 <body>
-
 <div id="app">
-
-  <p>input 元素：</p>
-
-  <input v-model="message" placeholder="编辑我……">
-
-  <p>消息是: {{ message }}</p>
-
-  <p>textarea 元素：</p>
-
-  <p style="white-space: pre">{{ message2 }}</p>
-
-  <textarea v-model="message2" placeholder="多行文本输入……"></textarea>
-
+  {{ info }}
 </div>
-
-<script>
-
+<script type = "text/javascript">
 new Vue({
-
   el: '#app',
-
-  data: {
-
-    message: 'Runoob',
-
-    message2: '菜鸟教程\r\nhttp://www.runoob.com'
-
+  data () {
+    return {
+      info: null
+    }
+  },
+  mounted () {
+    axios
+      .post('http://101.43.162.104:8000/db_server/get_test_data')
+      .then(response => (this.info = response))
+      .catch(function (error) { // 请求失败处理
+        console.log(error);
+      });
   }
-
 })
-
 </script>
-
 </body>
-
 </html>
