--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             <a href="./solution.html">精彩案例</a>
                         </li>
                         <li>
-                            <a href="http://vlgg66.5ii.top">交流社区</a>
+                            <a href="https://txc.qq.com/products/551916p">交流社区</a>
                         </li>
                         <li>
                             <a href="./docs.html">技术文档</a>
